@@ -44,6 +44,15 @@ précédente du livre.</para>
     appropriate for the entry or if needed the entire day's listitem.
     -->
 <listitem revision="sysv">
+      <para>08-06-2021</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Make shutting down the netwrok more robust.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem revision="sysv">
       <para>02-06-2021</para>
       <itemizedlist>
         <listitem>
