@@ -376,7 +376,7 @@
 <!ENTITY less-fin-du "4.1 Mo">
 <!ENTITY less-fin-sbu "moins de 0.1 SBU">
 
-<!ENTITY lfs-bootscripts-version "20210602">      <!-- Scripts depend on this format -->
+<!ENTITY lfs-bootscripts-version "20210608">      <!-- Scripts depend on this format -->
 <!ENTITY lfs-bootscripts-size "BOOTSCRIPTS-SIZE Ko">        
 <!ENTITY lfs-bootscripts-url "&downloads-root;lfs-bootscripts-&lfs-bootscripts-version;.tar.xz">
 <!ENTITY lfs-bootscripts-md5 "BOOTSCRIPTS-MD5SUM">  
